deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: sample-app
    app.kubernetes.io/name: sample-app
  name: sample-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sample-app
  name: sample-app
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-app
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-app
    spec:
      containers:
        - image: cr.sandbox.local/sample-app:latest
          name: sample-app
          ports:
            - containerPort: 80
              name: http
---
kind: Service
apiVersion: v1
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-app
spec:
  selector:
    app.kubernetes.io/name: sample-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-app
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sample-app.sandbox.local
      secretName: sample-app-cert
  rules:
    - host: sample-app.sandbox.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sample-app
                port:
                  name: http
